# ZeffClient

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  COPYRIGHT  COPYRIGHT.txt  Makefile  README.rst  pylintrc  pyproject.toml  setup.cfg  setup.py
.codefresh/: Dockerfile  README.rst  cd_zeffclient.yml  ci_zeffclient.yml  echo_variables.yml  var_file.yml
changelog/: 24.feature  28.feature  30.doc  README.rst  _template.rst
docs/: .gitignore  Makefile
docs/changelog/: 36.bugfix  37.doc  README.rst  _template.rst
docs/source/: changelog.rst  conf.py  glossary.rst  index.rst  install.rst  modules.rst  zeff.cli.rst  zeff.cloud.rst  zeff.record.rst  zeff.recordgenerator.rst  zeff.rst  zeff.validator.rst
docs/source/_templates/: links.html
docs/source/examples/: Makefile  cleanproject.rst  example_csv.rst  example_csv.tar.bz2  example_rdbms.rst  example_rdbms.tar.bz2  example_yaml.rst  example_yaml.tar.bz2  index.rst  project_directory.rst  train.rst
docs/source/examples/zeffclient_example_csv/: README  builder.py  generator.py  properties.csv  quickstart.sh  zeff.conf
docs/source/examples/zeffclient_example_rdbms/: builder.py  db.sqlite3  generator.py  quickstart.sh  zeff.conf
docs/source/examples/zeffclient_example_yaml/: README  builder.py  generator.py  properties.yml  quickstart.sh  zeff.conf
docs/source/uml/: classDiagram.uml  geospatialRecordClassDiagram.uml  overviewActivityDiagram.uml  overviewUseCase.uml  recordClassDiagram.uml  recordProcessSequenceDiagram.uml  temporalRecordClassDiagram.uml
share/: classDiagram.uml  recordProcessActivityDiagram.uml
src/zeff/: predictor.py  uploader.py  zeffdatasettype.py
src/zeff/cli/: RecordBuilder.template  RecordGenerator.template  __init__.py  actions.py  configuration_default.conf  init.py  logging_default.txt  pipeline.py  server.py  train.py  upload.py
src/zeff/cloud/: __init__.py  dataset.py  encoder.py  model.py  resource.py  training.py
src/zeff/record/: __init__.py  file.py  formatter.py  symbolic.py  unstructureddata.py  unstructuredtemporaldata.py
src/zeff/validator/: geospatial.py  temporal.py
tests/: Dockerfile  __init__.py  docker-compose.yml
tests/zeffTestSuite/: __init__.py  test_pipeline_observer.py  test_reporter.py
tests/zeffTestSuite/record/: test_formatter.py  test_record.py  test_structureddata.py  test_unstructureddata.py
tests/zeffTestSuite/recordgenerator/: __init__.py  test_generator.py  test_url_generator.py
tests/zeffcliTestSuite/: TestRecordBuilder.py  __init__.py  builder.py  db.sqlite3  generator.py  test_generate.py  test_init.py  test_main.py  validator.py  zeff.conf
tests/zefflibTestSuite/: __init__.py  test_reporter.py
zeff/: __init__.py  __main__.py  logging_default.txt  pipeline.py  pipeline_observation.py  predictor.py  reporter.py  runner.py  trainer.py  uploader.py  zeffcloud.py  zeffcloud.yml  zeffdatasettype.py
zeff/cli/: RecordBuilder.template  RecordGenerator.template  __init__.py  __main__.py  actions.py  configuration.py  configuration_default.conf  generate.py  init.py  logging_default.txt  models.py  pipeline.py  predict.py  record_builders.py  run.py  server.py  template.py  train.py  upload.py
zeff/cloud/: __init__.py  dataset.py  datasets.py  encoder.py  exception.py  model.py  record.py  records.py  resource.py  training.py
zeff/record/: __init__.py  aggregator.py  file.py  formatter.py  record.py  structured_data.py  structureddata.py  symbolic.py  unstructured_data.py  unstructureddata.py  unstructuredtemporaldata.py
zeff/recordgenerator/: __init__.py  generate.py  urlgenerators.py
zeff/validator/: __init__.py  generic.py  geospatial.py  record.py  temporal.py
zefflib/: __init__.py  reporter.py
